<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.geoquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/earth2"
        android:orientation="vertical">

        <!-- Get the user name-->
        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textCapWords"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>

        <!-- First Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/neighbour_question"
            android:textColor="@color/colorQuestion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/asia_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/asia_radio"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/africa_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/africa_radio"
            android:textSize="18dp" />

        <CheckBox
            android:id="@+id/america_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/america_radio"
            android:textSize="18dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>

        <!-- First Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/biggest_question"
            android:textColor="@color/colorQuestion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/asia_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/asia_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/europe_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/europe_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/america_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/america_radio"
                android:textSize="18dp" />


        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>

        <!-- Second Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/europe_name_question"
            android:textColor="@color/colorQuestion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textColor="@android:color/black">

            <RadioButton
                android:id="@+id/hera_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/hera_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/zeus_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/zeus_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/poseidon_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/poseidon_radio"
                android:textSize="18dp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>

        <!-- Third Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/hungary_question"
            android:textColor="@color/colorQuestion"
            android:textSize="18sp"

            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/asiaHungary_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/asia_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/europeHungary_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/europe_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/africaHungary_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/africa_radio"
                android:textSize="18dp" />

        </RadioGroup>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>


        <!-- Forth Question-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/budapest_question"
            android:textColor="@color/colorQuestion"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/budapest_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/budapest_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/bucharest_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bucharest_radio"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/moscow_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/moscow_radio"
                android:textSize="18dp" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"></View>

        <!-- Submit Button-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/ready_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:onClick="submitAnswer"
            android:text="@string/submit" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
